# RSSReader

./: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
src/: alembic.ini  config.py  helpers.py  main.py  rss_reader.py
src/db/: utils.py
src/db/migrations/: env.py  settings.py
src/db/migrations/versions/: 2026_02_26_1536-5dbe4b05bf96_initial.py
src/db/models/: __init__.py  base.py  feed.py  item.py
src/db/repositories/: rss.py
src/services/rss/: schemas.py  xml.py
src/tests/: test_rss_reader.py
